<resources>
    <string name="app_name" translatable="false">Stud.IP</string>
    <string name="url_field">server</string>
    <string name="continue_msg">continue</string>
    <string name="username_field">username</string>
    <string name="password_field">password</string>
    <string name="login_error_title">Error</string>
    <string name="restore_error_message">An error has occurred while trying to reconnect. Check you network connectivity or try to log in again.</string>
    <string name="menu_home">Home</string>
    <string name="menu_event">Courses</string>
    <string name="menu_files">Files</string>
    <string name="menu_messages">Messages</string>
    <string name="welcome">Welcome %1$s !</string>
    <string name="members_dialog_title">Participants</string>
    <string name="mkdir">New directory</string>
    <string name="upload">upload file</string>
    <string name="select_file">select file</string>
    <string name="delete">delete</string>
    <string name="dir">Directory</string>
    <string name="file">file</string>
    <string name="delete_msg">really delete?</string>
    <string name="message_subject">Subject</string>
    <string name="message_sender">Sender</string>
    <string name="message_time">time</string>
    <string name="message_new">write message</string>
    <string name="message_delete_title">delete message</string>
    <string name="message_delete_msg">Really delete this message?</string>
    <string name="message_search">Search</string>
    <string name="message_send">send</string>
    <string name="message_no_addressee">no addressee</string>
    <string name="message_no_subject">no subject</string>
    <string name="message_no_content">no content</string>
    <string name="hint_addressee">Addressee</string>
    <string name="hint_subject">Subject</string>
    <string name="hint_title">Title</string>
    <string name="hint_content">Content</string>
    <string name="forum_create">create Topic</string>
    <string name="autologout_msg">Your session has expired. Continue without a connection or log in again.</string>
    <string name="autologout_relogin">log in again</string>
    <string name="con_lost_msg">A connection to you Stud.IP server cannot be established. Continue without a connection or check your network connectivity.</string>
    <string name="con_lost_title">Connection lost</string>
    <string name="crash_msg">Unfortunately the app crashed. Please report the error and how it happened.</string>
    <string name="crash_clipboard">copy Crash-Log to clipboard</string>
    <string name="crash_mail">send Crash-Log to unofficial_studip_app_bugs@web.de</string>
    <string name="crash_github">open issue on Github</string>
    <string name="crash_restart">restart app</string>
    <string name="settings">Settings</string>
    <string name="settings_main">Settings:</string>
    <string name="clear_credentials">delete login data</string>
    <string name="clear_credentials_dialog">really delete login data?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings_theme">Theme:</string>
    <string name="settings_theme_dark">dark</string>
    <string name="settings_theme_light">light</string>
    <string name="settings_theme_auto">auto</string>
    <string name="settings_notification_service">Service for background notifications.</string>
    <string name="settings_notification_service2">runy every</string>
    <string name="settings_notification_service3">minutes</string>
    <string name="settings_experimental">Experimental features can be activated here:</string>
    <string name="auth_setting">Authentication method</string>
    <string name="auth_basic">HTTP Basic Authentication</string>
    <string name="auth_basic_desc">With HTTP Basic Authentication the username and password is send with every request.\nTo secure your password, unencrypted connections are refused.\nThe username and password have to be saved on the device. They are encrypted in a file, which only the app can access, but if the operating system itself is hacked (or you rooted your device), another app could get the key from the operating system and decrypt the username and password.\nBut for normal use it should be safe enough.\nThe advantage over a session cookie is that a session cookie eventually expires and you have to log in again. Because with HTTP Basic Authentication the username and password are stored on the device, you only have to log in once (as log as you don\'t change the password).</string>
    <string name="auth_cookie">session cookie</string>
    <string name="auth_cookie_desc">This is the method browsers use. Username and password are used to fetch a session cookie, after that the password is deleted.\nOnly the cookie is saved on the device, with the same security as the password with HTTP Basic Authentication. If the cookie is leaked, someone can impersonate you for as long as the cookie lasts, but they cannot change your password.\nThe downside is that the cookie eventually expires and you have to log in again.</string>
    <string name="auth_oauth">OAuth</string>
    <string name="auth_oauth_desc">The safest method: It works like a session cookie, but instead of entering the username and password in the app, you are redirected to the Stud.IP-Server and have to log in there.\nThe app only gets the authentication token afterwards, which works like a session cookie. Only works for systems for which OAuth data is available in the app.</string>
    <string name="settings_developer">Developer settings:\nThese settings could make the app unstable or lower the security. Use at your own risk.</string>
    <string name="semester_select">select semester</string>
    <string name="my_documents">Your files</string>
    <string name="not_logged_in">not logged in</string>
    <string name="message_no_search">unable to connect to server, cannot search users</string>
    <string name="message_no_send">could not send message</string>
    <string name="message_send_successfully">message send</string>
    <string name="help_button">view help</string>
    <string name="channel_files">Files</string>
    <string name="channel_messages">Messages</string>
    <string name="courses">Courses</string>
    <string name="studip_mobile">Stud.IP Mobile</string>
    <string name="messages_sync">Full sync</string>
    <string name="inbox">Inbox</string>
    <string name="outbox">Outbox</string>
</resources>