<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_main" />

            <Button
                android:id="@+id/clear_credentials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDeleteCredentials"
                android:text="@string/clear_credentials" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_theme" />

            <RadioGroup
                android:id="@+id/theme_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/theme_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onThemeClicked"
                    android:text="@string/settings_theme_dark" />

                <RadioButton
                    android:id="@+id/theme_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onThemeClicked"
                    android:text="@string/settings_theme_light" />

                <RadioButton
                    android:id="@+id/theme_auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onThemeClicked"
                    android:text="@string/settings_theme_auto" />
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_experimental" />

            <TextView
                android:id="@+id/auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auth_setting" />

            <RadioGroup
                android:id="@+id/auth_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkedButton="@id/auth_basic"
                android:onClick="onDeleteCredentials">

                <RadioButton
                    android:id="@+id/auth_basic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onAuthMethodClicked"
                    android:text="@string/auth_basic" />

                <RadioButton
                    android:id="@+id/auth_cookie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onAuthMethodClicked"
                    android:text="@string/auth_cookie" />

                <RadioButton
                    android:id="@+id/auth_oauth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onAuthMethodClicked"
                    android:text="@string/auth_oauth" />
            </RadioGroup>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_developer" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>